--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,225 @@
-contourpy==1.3.1
-cycler==0.12.1
-fonttools==4.55.0
-kiwisolver==1.4.7
-matplotlib==3.9.2
-numpy==2.1.3
-packaging==24.2
-pandas==2.2.3
-pillow==11.0.0
-pyparsing==3.2.0
-python-dateutil==2.9.0.post0
-pytz==2024.2
-seaborn==0.13.2
+absl-py==1.4.0
+aiohttp==3.8.5
+aiosignal==1.3.1
+anyio==4.6.0
+appnope==0.1.3
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+asgiref==3.7.2
+asttokens==2.2.1
+astunparse==1.6.3
+async-lru==2.0.4
+async-timeout==4.0.3
+attrs==23.1.0
+autopep8==2.0.1
+babel==2.16.0
+backcall==0.2.0
+beautifulsoup4==4.12.2
+bleach==6.1.0
+blinker==1.7.0
+blis==0.7.9
+bs4==0.0.1
+cachetools==5.3.0
+catalogue==2.0.8
+certifi==2022.12.7
+cffi==1.17.1
+channels==4.0.0
+charset-normalizer==3.2.0
+click==8.1.3
+colorama==0.4.6
+comm==0.1.3
+confection==0.0.4
+contourpy==1.0.7
+cycler==0.11.0
+cymem==2.0.7
+dash==2.16.1
+dash-bootstrap-components==1.6.0
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-table==5.0.0
+debugpy==1.6.6
+decorator==5.1.1
+defusedxml==0.7.1
+distlib==0.3.7
+Django==4.2.5
+django-nextjs==2.4.0
+docopt==0.6.2
+emoji==2.2.0
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.2.0/en_core_web_sm-2.2.0.tar.gz#sha256=65cea113d7509d5ab515583bbcbc9a31b4157bebbb73133d4110d2945476eaa4
+entrypoints==0.4
+et-xmlfile==1.1.0
+exceptiongroup==1.1.3
+executing==1.2.0
+fastjsonschema==2.20.0
+filelock==3.12.3
+firebase==4.0.1
+Flask==3.0.3
+flatbuffers==23.3.3
+fonttools==4.38.0
+fqdn==1.5.1
+frozenlist==1.4.0
+gast==0.4.0
+gensim==4.3.1
+google-auth==2.17.2
+google-auth-oauthlib==1.0.0
+google-pasta==0.2.0
+graphviz==0.20.3
+grpcio==1.53.0
+h11==0.14.0
+h5py==3.8.0
+httpcore==1.0.5
+httpx==0.27.2
+idna==3.4
+importlib_metadata==7.1.0
+iniconfig==2.0.0
+Interface==2.11.1
+ipykernel==6.22.0
+ipython==8.12.0
+ipywidgets==8.1.2
+isoduration==20.11.0
+itsdangerous==2.2.0
+jax==0.4.8
+jedi==0.18.2
+Jinja2==3.1.2
+joblib==1.2.0
+json5==0.9.25
+jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2023.12.1
+jupyter-events==0.10.0
+jupyter-lsp==2.2.5
+jupyter_client==7.4.9
+jupyter_core==5.3.0
+jupyter_server==2.14.2
+jupyter_server_terminals==0.5.3
+jupyterlab==4.2.5
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.27.3
+jupyterlab_widgets==3.0.10
+keras==2.12.0
+kiwisolver==1.4.4
+langcodes==3.3.0
+libclang==16.0.0
+Markdown==3.4.3
+MarkupSafe==2.1.2
+matplotlib==3.7.0
+matplotlib-inline==0.1.6
+mistune==3.0.2
+ml-dtypes==0.0.4
+mlxtend==0.23.1
+multidict==6.0.4
+murmurhash==1.0.9
+nbclient==0.10.0
+nbconvert==7.16.4
+nbformat==5.10.4
+nest-asyncio==1.5.6
+networkx==3.4.2
+nltk==3.8.1
+nodejs==0.1.1
+notebook==7.2.2
+notebook_shim==0.2.4
+numpy==1.23.0
+oauthlib==3.2.2
+openpyxl==3.1.2
+opt-einsum==3.3.0
+optional-django==0.1.0
+overrides==7.7.0
+packaging==23.1
+pandas==2.0.0
+pandocfilters==1.5.1
+parso==0.8.3
+pathy==0.10.1
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==9.4.0
+pipreqs==0.4.13
+platformdirs==3.10.0
+plotly==5.14.1
+pluggy==1.3.0
+preshed==3.0.8
+prometheus_client==0.21.0
+prompt-toolkit==3.0.38
+protobuf==4.22.1
+psutil==5.9.4
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pybuilder==0.13.9
+pycodestyle==2.10.0
+pycparser==2.22
+pydantic==1.10.7
+Pygments==2.14.0
+pyparsing==3.0.9
+pytest==7.4.2
+python-dateutil==2.8.2
+python-json-logger==2.0.7
+pytz==2023.3.post1
+PyYAML==6.0.2
+pyzmq==24.0.1
+referencing==0.35.1
+regex==2023.3.23
+requests==2.32.3
+requests-oauthlib==1.3.1
+retrying==1.3.4
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rpds-py==0.20.0
+rsa==4.9
+scikit-learn==1.2.2
+scipy==1.10.1
+seaborn==0.12.2
+Send2Trash==1.8.3
 six==1.16.0
-tzdata==2024.2
+smart-open==6.3.0
+sniffio==1.3.1
+soupsieve==2.4.1
+spacey==0.1.1
+spacy==3.5.2
+spacy-legacy==3.0.12
+spacy-loggers==1.0.4
+sqlparse==0.4.4
+srsly==2.4.6
+stack-data==0.6.2
+tabulate==0.9.0
+tenacity==8.2.2
+tensorboard==2.12.1
+tensorboard-data-server==0.7.0
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.12.0
+tensorflow-estimator==2.12.0
+tensorflow-io-gcs-filesystem==0.32.0
+termcolor==2.2.0
+terminado==0.18.1
+thinc==8.1.9
+threadpoolctl==3.1.0
+tinycss2==1.3.0
+tk==0.1.0
+tomli==2.0.1
+tornado==6.2
+tqdm==4.65.0
+traitlets==5.9.0
+typer==0.7.0
+types-python-dateutil==2.9.0.20240906
+typing_extensions==4.7.1
+tzdata==2023.3
+uri-template==1.3.0
+urllib3==1.26.15
+virtualenv==20.24.4
+wasabi==1.1.1
+wcwidth==0.2.6
+webcolors==24.8.0
+webencodings==0.5.1
+websocket-client==1.8.0
+websockets==11.0.3
+Werkzeug==3.0.2
+widgetsnbextension==4.0.10
+wrapt==1.14.1
+xgboost==2.0.3
+yarg==0.1.9
+yarl==1.9.2
+zipp==3.18.1
+zope.event==4.6
+zope.interface==6.0
+zope.schema==7.0.1
